GNOME Bugzilla – Bug 755692
gtk-demo bad return value for the callback function for the "command-line" signal
Last modified: 2015-09-28 10:30:51 UTC
in the file gtk+/demos/gtk-demo/main.c a the line 1173, the signal "command-line" is linked with the callback command_line: g_signal_connect (app, "command-line", G_CALLBACK (command_line), NULL); And this callback can be found at the line 1076 : static void command_line (GApplication *app, GApplicationCommandLine *cmdline) After looking at the documentation, this callback should return a gint: https://developer.gnome.org/gio/unstable/GApplication.html#GApplication-command-line gint user_function (GApplication *application, GApplicationCommandLine *command_line, gpointer user_data) Sorry for bothering you if this is not an error.
Thanks for pointing that out, fixed