Return a value from ::command-line handler

The signal expects a return value, so give it one.

https://bugzilla.gnome.org/show_bug.cgi?id=755692